tests/error/modifier_errors/ctrl_arg_copy.err
Error: Copy violation (at $FILE:18:12)
   | 
16 |     q = qubit()
17 |     with control(q):
18 |         use(q)
   |             ^ Variable `q` with non-copyable type `qubit` cannot be
   |               borrowed ...

Note:
   | 
16 |     q = qubit()
17 |     with control(q):
   |                  - Variable `q` already borrowed here

Guppy compilation failed due to 1 previous error
